--- a/pages/interface-card.html
+++ b/pages/interface-card.html
@@ -4,65 +4,118 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="interface-card.css" />
+
+    <!-- ========================favicons================== -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../images/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+    <title>Chat-interface</title>
+    <link rel="stylesheet" href="../components/interface-card.css" />
 
     <!-- =============================color-scheme==================== -->
-    <link rel="stylesheet" href="color-scheme.css" />
+    <link rel="stylesheet" href="../components/color-scheme.css" />
 
     <!-- ===================navbar================================================ -->
-    <link rel="stylesheet" href="navbar.css" />
+    <link rel="stylesheet" href="../components/navbar.css" />
 
     <!-- ========================typography=============================== -->
-    <link rel="stylesheet" href="typography.css" />
+    <link rel="stylesheet" href="../components/typography.css" />
 
     <!-- ========================button============================ -->
-    <link rel="stylesheet" href="button.css" />
+    <link rel="stylesheet" href="../components/button.css" />
   </head>
   <body>
     <!-- ===================Begining of navbar====================== -->
     <header class="header">
       <nav class="nav d-flex-space-b ninety-percent">
         <div class="nav-logo">
-          <img src="../images/top-logo.svg" alt="" />
+          <a href="../index.html"
+            ><img src="../images/top-logo.svg" alt="" />
+          </a>
         </div>
 
-        <ul class="nav-menu d-flex-space-b">
+        <ul class="nav-menu d-flex-gap">
           <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
+            <a href="../index.html" class="nav-link">Home</a>
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">WhatsApp</a>
+            <a href="../pages/whatsapp.html" class="nav-link">WhatsApp</a>
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">Instagram</a>
+            <a href="../pages/instagram.html" class="nav-link">Instagram</a>
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">Facebook</a>
+            <a href="../pages/facebook.html" class="nav-link">Facebook</a>
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">Tiktok</a>
+            <a href="../pages/telegram.html" class="nav-link">Telegram</a>
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">Twitter</a>
+            <a href="../pages/twitter.html" class="nav-link">Twitter</a>
           </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link"
-              >More
-              <img src="../images/more-icon.svg" alt="" class="more-icon" />
-              <ul class="sub-menu">
-                <li>About Us</li>
-                <li>Privacy</li>
-                <li>Contact</li>
-              </ul>
-            </a>
+
+          <li class="nav-item more-btn">
+            More
+            <img src="../images/more-icon.svg" alt="" class="more-icon" />
+            <ul class="sub-menu">
+              <li><a href="../pages/snapchat.html">Snapchat</a></li>
+              <li><a href="../pages/about.html"> About</a></li>
+
+              <li><a href="../pages/privacy.html"> Privacy</a></li>
+
+              <li><a href="../pages/contact.html"> Contact</a></li>
+            </ul>
           </li>
         </ul>
+        <div class="plate plate1" onclick="this.classList.toggle('active')">
+          <svg
+            class="burger"
+            version="1.1"
+            height="100"
+            width="100"
+            viewBox="0 0 100 100"
+          >
+            <path class="line line1" d="M 30,65 H 70" />
+            <path
+              class="line line2"
+              d="M 70,50 H 30 C 30,50 18.644068,50.320751 18.644068,36.016949 C 18.644068,21.712696 24.988973,6.5812347 38.79661,11.016949 C 52.604247,15.452663 46.423729,62.711864 46.423729,62.711864 L 50.423729,49.152542 L 50.423729,16.101695"
+            />
+            <path
+              class="line line3"
+              d="M 30,35 H 70 C 70,35 80.084746,36.737688 80.084746,25.423729 C 80.084746,19.599612 75.882239,9.3123528 64.711864,13.559322 C 53.541489,17.806291 54.423729,62.711864 54.423729,62.711864 L 50.423729,49.152542 V 16.101695"
+            />
+          </svg>
+          <svg
+            class="x"
+            version="1.1"
+            height="100"
+            width="100"
+            viewBox="0 0 100 100"
+          >
+            <path class="line" d="M 34,32 L 66,68" />
+            <path class="line" d="M 66,32 L 34,68" />
+          </svg>
+        </div>
       </nav>
     </header>
     <!-- =========================End of navbar======================= -->
@@ -90,7 +143,11 @@
                 create a chat that looks just like the real thing
               </p>
               <div class="button-container">
-                <button class="inactive-button">Generate WhatsApp Chat</button>
+                <a href="../pages/whatsapp.html"
+                  ><button class="inactive-button">
+                    Generate WhatsApp Chat
+                  </button></a
+                >
               </div>
             </div>
           </div>
@@ -113,7 +170,11 @@
                 create a chat that looks just like the real thing
               </p>
               <div class="button-container">
-                <button class="inactive-button">Generate Instagram Chat</button>
+                <a href="../pages/instagram.html"
+                  ><button class="inactive-button">
+                    Generate Instagram Chat
+                  </button></a
+                >
               </div>
             </div>
           </div>
@@ -136,7 +197,11 @@
                 create a chat that looks just like the real thing
               </p>
               <div class="button-container">
-                <button class="inactive-button">Generate Twitter Chat</button>
+                <a href="../pages/twitter.html">
+                  <button class="inactive-button">
+                    Generate Twitter Chat
+                  </button></a
+                >
               </div>
             </div>
           </div>
@@ -159,7 +224,11 @@
                 create a chat that looks just like the real thing
               </p>
               <div class="button-container">
-                <button class="inactive-button">Generate Snapchat Chat</button>
+                <a href="../pages/snapchat.html"
+                  ><button class="inactive-button">
+                    Generate Snapchat Chat
+                  </button></a
+                >
               </div>
             </div>
           </div>
@@ -182,22 +251,26 @@
                 create a chat that looks just like the real thing
               </p>
               <div class="button-container">
-                <button class="inactive-button">Generate Facebook Chat</button>
+                <a href="../pages/facebook.html">
+                  <button class="inactive-button">
+                    Generate Facebook Chat
+                  </button>
+                </a>
               </div>
             </div>
           </div>
 
           <div class="card">
             <div class="card-thmb">
-              <img src="../images/tiktok-thmb.svg" alt="" class="card-img" />
+              <img src="../images/telegram.svg" alt="" class="card-img" />
               <img
-                src="../images/tiktok-inner-logo.svg"
+                src="../images/telegram-center.svg"
                 alt=""
                 class="center-img"
               />
             </div>
             <div class="card-details">
-              <h4 class="card-title">Generate Tiktok Fake Chat</h4>
+              <h4 class="card-title">Generate Telegram Fake Chat</h4>
               <p class="card-desc">
                 Get to generate fake whatsapp chat to prank Your friends.
                 Generate realistic and convincing fake chats in just a few
@@ -205,12 +278,29 @@
                 create a chat that looks just like the real thing
               </p>
               <div class="button-container">
-                <button class="inactive-button">Generate tiktok Chat</button>
+                <a href="../pages/facebook.html"
+                  ><button class="inactive-button">
+                    Generate Telegram Chat
+                  </button></a
+                >
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <footer class="footer">
+      <div class="ninety-percent d-flex-space-b">
+        <a href="../index.html" class="logo"
+          ><img src="../images/top-logo.svg" alt="" class="footer-logo"
+        /></a>
+
+        <a href="https://github.com/Andarson-Brel/fake-chat-generator"
+          ><img src="../images/github-logo.svg" alt="" class="github"
+        /></a>
+      </div>
+    </footer>
+    <script src="../javascript/navbar.js"></script>
   </body>
 </html>
