--- a/pages/facebook.html
+++ b/pages/facebook.html
@@ -44,43 +44,49 @@
     <header class="header">
       <nav class="nav d-flex-space-b ninety-percent">
         <div class="nav-logo">
-          <img src="../images/top-logo.svg" alt="" />
+          <a href="../index.html"
+            ><img src="../images/top-logo.svg" alt="" />
+          </a>
         </div>
 
-        <ul class="nav-menu d-flex-space-b">
+        <ul class="nav-menu d-flex-gap">
           <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
+            <a href="../index.html" class="nav-link">Home</a>
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">WhatsApp</a>
+            <a href="../pages/whatsapp.html" class="nav-link">WhatsApp</a>
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">Instagram</a>
+            <a href="../pages/instagram.html" class="nav-link">Instagram</a>
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link active">Facebook</a>
+            <a href="../pages/facebook.html" class="nav-link active"
+              >Facebook</a
+            >
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">Tiktok</a>
+            <a href="../pages/telegram.html" class="nav-link">Telegram</a>
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">Twitter</a>
+            <a href="../pages/twitter.html" class="nav-link">Twitter</a>
           </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link"
-              >More
-              <img src="../images/more-icon.svg" alt="" class="more-icon" />
-              <ul class="sub-menu">
-                <li>About Us</li>
-                <li>Privacy</li>
-                <li>Contact</li>
-              </ul>
-            </a>
+
+          <li class="nav-item more-btn">
+            More
+            <img src="../images/more-icon.svg" alt="" class="more-icon" />
+            <ul class="sub-menu">
+              <li><a href="../pages/snapchat.html">Snapchat</a></li>
+              <li><a href="../pages/about.html"> About</a></li>
+
+              <li><a href="../pages/privacy.html"> Privacy</a></li>
+
+              <li><a href="../pages/contact.html"> Contact</a></li>
+            </ul>
           </li>
         </ul>
         <div class="plate plate1" onclick="this.classList.toggle('active')">
@@ -169,7 +175,7 @@
               <button class="inactive-button active">iPhone</button>
               <button class="inactive-button">Android</button>
             </div>
-            <h2 class="preview-heading">Fake WhatsApp Chat Generatort</h2>
+            <h2 class="preview-heading">Generate Fake facebook Chat</h2>
           </div>
           <h2 class="preview-title">Preview</h2>
 
@@ -494,6 +500,17 @@ Message...  </textarea
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <div class="ninety-percent d-flex-space-b">
+        <a href="../index.html" class="logo"
+          ><img src="../images/top-logo.svg" alt="" class="footer-logo"
+        /></a>
+
+        <a href="https://github.com/Andarson-Brel/fake-chat-generator"
+          ><img src="../images/github-logo.svg" alt="" class="github"
+        /></a>
+      </div>
+    </footer>
     <script src="../javascript/navbar.js"></script>
   </body>
 </html>
