--- a/pages/whatsapp.html
+++ b/pages/whatsapp.html
@@ -382,7 +382,36 @@
           </div>
         </div>
       </div>
+      <div class="btn-container">
+        <button class="inactive-button move-btn">Download Chat as Image</button>
+      </div>
+
+      <div class="disclaimer">
+        <img src="../images/danger.svg" alt="" class="disclaimer-icon" />
+        <p class="disclaimer-p">
+          <span class="dsclaimer-heading"> DISCLAIMER:</span> The Fake Chat
+          Generator is intended for entertainment and educational purposes only.
+          It is not intended to be used for any illegal or malicious activities.
+          The generated fake chats should not be taken as real and should not be
+          used to deceive or harm others. The creators and owners of the Fake
+          Chat Generator are not responsible for any misuse of the tool. By
+          using the Fake Chat Generator, you agree to these terms and assume all
+          responsibility for your actions. Please use the Fake Chat Generator
+          responsibly and with respect for others.
+        </p>
+      </div>
     </div>
+    <footer class="footer">
+      <div class="ninety-percent d-flex-space-b">
+        <a href="../index.html" class="logo"
+          ><img src="../images/top-logo.svg" alt="" class="footer-logo"
+        /></a>
+
+        <a href="https://github.com/Andarson-Brel/fake-chat-generator"
+          ><img src="../images/github-logo.svg" alt="" class="github"
+        /></a>
+      </div>
+    </footer>
     <script src="../javascript/navbar.js"></script>
   </body>
 </html>
