edited telegram link

--- a/pages/interface-card.html
+++ b/pages/interface-card.html
@@ -278,7 +278,7 @@
                 create a chat that looks just like the real thing
               </p>
               <div class="button-container">
-                <a href="../pages/facebook.html"
+                <a href="../pages/telegram.html"
                   ><button class="inactive-button">
                     Generate Telegram Chat
                   </button></a
